--- a/css/default.css
+++ b/css/default.css
@@ -4,10 +4,33 @@
   box-sizing: border-box;
 }
 
+button {
+  margin-bottom: 10px;
+  width: 100%;
+  height: 40px;
+  font-size: 1em;
+  font-weight: bold;
+  color: #d99c25;
+  background-color: #fad31d;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  transition: 0;
+  box-shadow: -5px -5px 10px #ffea00,
+    5px 5px 10px #d99c25;
+}
+
+.clicked {
+  box-shadow: inset -5px -5px 10px #ffea00,
+    inset 5px 5px 10px #d99c25;
+  border: none;
+}
+
 body {
   width: 100vw;
   height: 100vh;
-  padding: 20px;
+  padding: 15px;
+  font-size: 15px;
   background-color: #fad31d;
   display: flex;
   flex-direction: column;
@@ -19,16 +42,20 @@ body {
   position: relative;
   width: 100%;
   height: 48%;
+  padding-top: 30px;
   background-color: #fad31d;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   border-radius: 30px;
-  box-shadow: 8px 8px 16px #d99c25, -8px -8px 16px #ffea00;
+  box-shadow: 6px 6px 12px #d99c25,
+    -6px -6px 12px #ffea00;
 }
 
 .code-content {
   position: relative;
+  padding: .6rem;
   width: 100%;
   height: 48%;
   background-color: #fad31d;
@@ -37,4 +64,21 @@ body {
   align-items: center;
   border-radius: 30px;
   border: 3px solid #d99c25;
+}
+
+#code-area {
+  width: 80%;
+  height: 100%;
+  color: #2582d9;
+  font-size: .7rem;
+  overflow: hidden;
+}
+
+#controller {
+  width: 60%;
+  height: 20%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
