--- a/css/default.css
+++ b/css/default.css
@@ -5,15 +5,16 @@
 }
 
 button {
+  margin-right: 15px;
   margin-bottom: 10px;
-  width: 100%;
+  width: 40%;
   height: 40px;
   font-size: 1em;
   font-weight: bold;
   color: #d99c25;
   background-color: #fad31d;
   border: none;
-  border-radius: 15px;
+  border-radius: 20px;
   outline: none;
   transition: 0;
   box-shadow: -5px -5px 10px #ffea00,
@@ -75,10 +76,19 @@ body {
 }
 
 #controller {
-  width: 60%;
+  width: 90%;
   height: 20%;
   margin-top: 5%;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
 }
+
+.speed-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+/* #controller :not(.play-btn):not(:nth-child(2)) {
+  display: none;
+} */
