--- a/css/default.css
+++ b/css/default.css
@@ -1,30 +1,37 @@
+@media screen and (min-width: 320px) {
+  html {
+    font-size: 11px;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+@media screen and (min-width: 414px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 25px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  html {
+    font-size: 30px;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-button {
-  margin-right: 15px;
-  margin-bottom: 10px;
-  width: 40%;
-  height: 40px;
-  font-size: 1em;
-  font-weight: bold;
-  color: #d99c25;
-  background-color: #fad31d;
-  border: none;
-  border-radius: 20px;
-  outline: none;
-  transition: 0;
-  box-shadow: -5px -5px 10px #ffea00,
-    5px 5px 10px #d99c25;
-}
-
-.clicked {
-  box-shadow: inset -5px -5px 10px #ffea00,
-    inset 5px 5px 10px #d99c25;
-  border: none;
 }
 
 body {
@@ -39,15 +46,42 @@ body {
   flex-wrap: wrap;
 }
 
+button {
+  margin-right: 15px;
+  margin-bottom: 10px;
+  width: 40%;
+  height: 100%;
+  font-size: 1em;
+  font-weight: bold;
+  color: #d99c25;
+  background-color: #fad31d;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  transition: 0;
+  box-shadow: -5px -5px 10px #ffea00,
+    5px 5px 10px #d99c25;
+}
+
+.speed-btn {
+  width: 40px;
+  border-radius: 20px;
+}
+
+.clicked {
+  box-shadow: inset -5px -5px 10px #ffea00,
+    inset 5px 5px 10px #d99c25;
+  border: none;
+}
+
 .content {
   position: relative;
   width: 100%;
-  height: 48%;
-  padding-top: 30px;
+  height: 50%;
   background-color: #fad31d;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   border-radius: 30px;
   box-shadow: 6px 6px 12px #d99c25,
@@ -58,37 +92,35 @@ body {
   position: relative;
   padding: .6rem;
   width: 100%;
-  height: 48%;
+  height: 35%;
   background-color: #fad31d;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: start;
   border-radius: 30px;
   border: 3px solid #d99c25;
 }
 
 #code-area {
-  width: 80%;
+  width: 100%;
   height: 100%;
   color: #2582d9;
-  font-size: .7rem;
-  overflow: hidden;
+  font-size: 1rem;
+  font-weight: bold;
+  overflow: scroll;
+}
+
+#code-area::-webkit-scrollbar {
+  display: none;
+}
+
+#code-area {
+  -ms-overflow-style: none;
 }
 
 #controller {
-  width: 90%;
-  height: 20%;
-  margin-top: 5%;
+  width: 100%;
+  height: 5%;
+  margin: 10px 0;
   display: flex;
   justify-content: center;
 }
-
-.speed-btn {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-/* #controller :not(.play-btn):not(:nth-child(2)) {
-  display: none;
-} */
